test/at_least_one_arg.ref
Error: File "at_least_one_arg.cppo", line 2, characters 12-13
Error: At least one argument is required
